2021-02-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (MSLPushImage): Only clone attributes if not null.
        Should address oss-fuzz 31205 "graphicsmagick:coder_MSL_fuzzer:
        ASSERT: image != (Image *) NULL".

        * coders/jp2.c (ReadJP2Image): Validate that actual file header
        does appear to be a supported format regardless of 'magick' being
        forced.  Jasper appears to dispatch to other libraries if it
        detects a known format it supports and then the program exits if
        there is a problem.  Fixes oss-fuzz 31200
        "graphicsmagick:coder_JPC_fuzzer: Unexpected-exit in error_exit".

2021-02-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/nt_base.c (NTGhostscriptFind,NTGhostscriptGetString):
        Handle Ghostscript point versions added after 9.52.  Fixes
        SourceForge issue #636 'Failed to find Ghostscript' with
        Ghostscript version 9.53.0+.

        * fuzzing/oss-fuzz-build.sh: Patch by Paul Kehrer to incorporate
        Jasper and libxml2 into the oss-fuzz build.

2021-02-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * VisualMagick/All/All.vcproj.in: Fixes by sourcer42
        <sourcer42@users.sourceforge.net> for the problem that Visual
        Studio is not able to load the All project if the project supports
        the x64 target.

2021-02-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * www/Hg.rst: Document new redundant Mercurial server at OSDN,
        "https://hg.osdn.net/view/graphicsmagick/GM".

2021-02-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Add explicit cast to float where implicit casts to float from
        double were occurring.

        * magick/utility.c (MagickDoubleToLong): Guard against LONG_MAX
        not directly representable as a double.

2021-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/utility.c (TranslateTextEx): If image resolution is